--- a/my-admin/src/style/mixin.scss
+++ b/my-admin/src/style/mixin.scss
@@ -1,7 +1,11 @@
 
 // 侧边菜单的宽度
-$base_menu_width: 260px;
+$base_menu_width: 150px;
 
 
 // 顶部导航栏的高度
 $base_tabbar_height: 50px;
+
+
+// Logo的高度
+$base_logo_height: 50px;
