--- a/my-admin/src/style/mixin.scss
+++ b/my-admin/src/style/mixin.scss
@@ -1,7 +1,10 @@
 
 // 侧边菜单的宽度
-$base_menu_width: 150px;
+$base_menu_width: 200px;
 
+
+// 侧边菜单折叠后的宽度
+$base-menu-fold-width:50px;
 
 // 顶部导航栏的高度
 $base_tabbar_height: 50px;
